themes/bthree/assets/css/page_download.css
.box-shadow-none{-webkit-box-shadow:none;-moz-box-shadow:none;box-shadow:none;}
.text-shadow-none{-webkit-text-shadow:none;-moz-text-shadow:none;text-shadow:none;}
.transition-none{-webkit-transition:none;-moz-transition:none;-o-transition:none;-ms-transition:none;transition:none;-o-transition-property:none !important;-moz-transition-property:none !important;-ms-transition-property:none !important;-webkit-transition-property:none !important;transition-property:none !important;-o-transform:none !important;-moz-transform:none !important;-ms-transform:none !important;-webkit-transform:none !important;transform:none !important;-webkit-animation:none !important;-moz-animation:none !important;-o-animation:none !important;-ms-animation:none !important;animation:none !important;}
.horizontal_flip{-moz-transform:scaleX(-1);-o-transform:scaleX(-1);-webkit-transform:scaleX(-1);transform:scaleX(-1);filter:FlipH;-ms-filter:"FlipH";}
.nav-tabs>.active>a,.nav-tabs>.active>a:hover{color:white;background-color:transparent;border:none;}
.tab-content{color:white;overflow:hidden;clear:both;border-top:thin solid rgba(248, 248, 248, 0.1);-webkit-box-shadow:1px 1px 2px rgba(0, 0, 0, 0.2);-moz-box-shadow:1px 1px 2px rgba(0, 0, 0, 0.2);box-shadow:1px 1px 2px rgba(0, 0, 0, 0.2);}
.tab-content a{color:#ffffff;}
.nav-tabs>li>a:hover{background-color:rgba(0, 128, 128, 0.1);}
.nav-tabs>li.active{font-weight:bold;}
.windows{background-color:#476b85;}
.osx{background-color:#6b527a;}
.linux{background-color:#6a8547;}
.source{background-color:#4d4d4d;}
.tab-content.windows{border-bottom:thick solid #365063;}
.tab-content.osx{border-bottom:thick solid #513d5c;}
.tab-content.linux{border-bottom:thick solid #506336;}
.tab-content.source{border-bottom:thick solid #333333;}
.tab-content .header{width:100%;margin:25px auto;padding:0;border:none;background-color:transparent;position:relative;}
.post_header{margin:0 0 35px 0;}
.download .package{position:relative;width:98%;margin:5px auto;clear:both;border-top:thin solid rgba(248, 248, 248, 0.1);border-left:10px solid rgba(248, 248, 248, 0.1);-webkit-box-shadow:1px 1px 2px rgba(0, 0, 0, 0.2);-moz-box-shadow:1px 1px 2px rgba(0, 0, 0, 0.2);box-shadow:1px 1px 2px rgba(0, 0, 0, 0.2);}
.download .package .icon{position:relative;font-size:400%;color:rgba(255, 255, 255, 0.85);float:left;margin:15px 0 0 15px;bottom:5px;-webkit-text-shadow:1px 1px 2px rgba(0, 0, 0, 0.3);-moz-text-shadow:1px 1px 2px rgba(0, 0, 0, 0.3);text-shadow:1px 1px 2px rgba(0, 0, 0, 0.3);}
.download .package h2{float:left;font-size:240%;margin:20px 0 0 20px;}
.download .package .links,.download .header .depth{position:relative;float:right;width:16%;text-align:center;font-size:90%;padding:10px 0;margin:0;}
.download .header .depth{text-align:center;font-size:120%;overflow:hidden;position:relative;-webkit-transition:background-color 0.2s ease-in;-moz-transition:background-color 0.2s ease-in;-o-transition:background-color 0.2s ease-in;-ms-transition:background-color 0.2s ease-in;transition:background-color 0.2s ease-in;}
.download .header .depth small{color:rgba(255, 255, 255, 0.6);margin-left:3px;-webkit-text-shadow:none;-moz-text-shadow:none;text-shadow:none;}
.download .header .depth:hover{background-color:rgba(255, 255, 255, 0.1);}
.download .header .depth .depth_text,.download .header .depth .depth_icon{position:relative;float:left;-webkit-transition:all 0.2s ease-in-out;-moz-transition:all 0.2s ease-in-out;-o-transition:all 0.2s ease-in-out;-ms-transition:all 0.2s ease-in-out;transition:all 0.2s ease-in-out;}
.download .header .depth .depth_text{top:0;right:15%;}
.download .header .depth .depth_icon{top:-80px;left:30%;font-size:320%;}
.download .header .depth:hover .depth_icon{top:5px;}
.download .header .depth:hover .depth_text{top:80px;}
.download .package .choose{position:absolute;top:40%;right:40%;opacity:0;-webkit-transition:all 0.15s ease-out;-moz-transition:all 0.15s ease-out;-o-transition:all 0.15s ease-out;-ms-transition:all 0.15s ease-out;transition:all 0.15s ease-out;}
.download .package:hover .choose{right:38%;opacity:1.0;}
.download .header .border-left{border-left:thin solid rgba(255, 255, 255, 0.3);}
.download .header .title{margin:0 0 20px 0;float:left;}
.download .package ul{list-style-type:none;}
.download .package li{margin:2px 0;line-height:110%;}
.download .package li:hover{font-weight:bold;}
.download .windows .package{background-color:#5986a6;}
.download .windows .package:hover{background-color:#608ba9;}
.download .osx .package{background-color:#866699;}
.download .osx .package:hover{background-color:#8b6c9d;}
.download .linux .package{background-color:#85a659;}
.download .linux .package:hover{background-color:#89a960;}
.download .source .package{background-color:#666666;}
.download .source .package:hover{background-color:#6b6b6b;}
.download .package:hover .links{background-color:rgba(248, 248, 248, 0.1);}
.download .package .links a:hover li:before{content:"\f054";font-family:FontAwesome;float:left;left:28%;position:absolute;opacity:0.5;}
.download .tab-content .alert i{font-size:150%;float:left;margin:0 10px 0 0;opacity:0.5;}
.download .tab-content .alert{background-color:transparent;font-size:90%;border:none;color:white;margin:0;-webkit-text-shadow:none;-moz-text-shadow:none;text-shadow:none;}
.download .tab-content .alert a:hover{font-weight:bold;}
#tab-replace{margin:0;padding:0;}
.thanks{height:88%;text-align:center;clear:both;-webkit-transition:all 0.2s ease-in;-moz-transition:all 0.2s ease-in;-o-transition:all 0.2s ease-in;-ms-transition:all 0.2s ease-in;transition:all 0.2s ease-in;}
#clear_download i{font-size:150%;color:rgba(68, 68, 68, 0.2);cursor:pointer;}
.thanks h1{font-size:400%;font-weight:bold;}
.thanks .donations{width:100%;margin:20px auto;}
.thanks .donations .donate_way{max-width:28%;min-height:250px;background-color:#ebebeb;float:left;margin:0 30px 0 0;padding:0 10px;border-bottom:2px solid rgba(68, 68, 68, 0.1);overflow:hidden;-webkit-box-shadow:1px 1px 3px rgba(95, 95, 95, 0.25);-moz-box-shadow:1px 1px 3px rgba(95, 95, 95, 0.25);box-shadow:1px 1px 3px rgba(95, 95, 95, 0.25);-webkit-transition:all 0.2s ease-in;-moz-transition:all 0.2s ease-in;-o-transition:all 0.2s ease-in;-ms-transition:all 0.2s ease-in;transition:all 0.2s ease-in;}
.thanks .donations .donate_way h1{margin:25px 0 4px 0;padding-top:0;}
.thanks .donations .donate_way:hover{background-color:#f3f3f3;}
@-webkit-keyframes slide_away{0%{-webkit-transform:translateX(0px);} 49%{-webkit-transform:translateX(150px);opacity:0.5;} 50%{-webkit-transform:translateX(-150px);opacity:0.5;} 100%{-webkit-transform:translateX(0px);}}@keyframes slide_away{0%{transform:translateX(0px);-moz-transform:translateX(0px);} 49%{transform:translateX(150px);-moz-transform:translateX(150px);} 50%{transform:translateX(-150px);-moz-transform:translateX(-150px);} 100%{transform:translateX(0px);-moz-transform:translateX(0px);}}@keyframes rotating{0%{transform:rotate(0deg);-moz-transform:rotate(0deg);} 100%{transform:rotate(-180deg);-moz-transform:rotate(-180deg);}}@-webkit-keyframes rotating{0%{-webkit-transform:rotate(0deg);} 100%{-webkit-transform:rotate(-180deg);}}.thanks .donations .donate_way.shopping:hover h1{animation:slide_away 0.5s;-moz-animation:slide_away 0.5s;-webkit-animation:slide_away 0.5s;}
.thanks .donations .donate_way h1{-webkit-transition:all 0.2s ease-in;-moz-transition:all 0.2s ease-in;-o-transition:all 0.2s ease-in;-ms-transition:all 0.2s ease-in;transition:all 0.2s ease-in;}
.thanks .donations .donate_way.donation:hover h1{color:darkred;opacity:0.5;}
.thanks .donations .donate_way.devfund:hover h1{animation:rotating 1s ease-in-out;-moz-animation:rotating 1s ease-in-out;-webkit-animation:rotating 1s ease-in-out;}
.download .introduction{padding-left:20px;}
.download .introduction h1{padding-top:20px;}
.download .box{padding:0 10px 15px 0;min-height:30px;}
.release_candidate{margin:20px 0 8px 0;padding:6px 0 10px 0;width:98%;border:thin solid #f6f6f6;-webkit-box-shadow:3px 3px 0 rgba(208, 208, 208, 0.6);-moz-box-shadow:3px 3px 0 rgba(208, 208, 208, 0.6);box-shadow:3px 3px 0 rgba(208, 208, 208, 0.6);background-color:#f8f8f8;color:#444444;clear:both;}
.release_candidate h1,.release_candidate h2,.release_candidate h3,.release_candidate p{padding:0;margin:0;}
.release_candidate h1,.release_candidate h2,.release_candidate h3{font-size:180%;}
.release_candidate .rc_info{width:64%;float:left;margin-left:15px;}
.release_candidate .rc_download,.release_candidate .rc_logs{width:16%;float:right;font-size:400%;text-align:center;margin-top:15px;border-left:thin solid #eaeaea;-webkit-transition:all 0.15s ease-in;-moz-transition:all 0.15s ease-in;-o-transition:all 0.15s ease-in;-ms-transition:all 0.15s ease-in;transition:all 0.15s ease-in;}
.release_candidate .rc_logs{border:none;}

